name: ApacheLogRev
version: 0.0.1
cabal-version: -any
build-type: Simple
license: BSD3
license-file: /work/haskell/leksah/ApacheLogRev/LICENSE
copyright: Daniel Molina Wegener
maintainer: Daniel Molina Wegener
build-depends: Chart -any, Chart-gtk -any, MissingH -any,
               base -any, bytestring -any, colour -any, containers -any,
               data-accessor -any, hs-GeoIP -any, parsec -any, text -any,
               time >= 1.2.0.3, unix -any
stability:
homepage: http://coder.cl/products/logrev/
package-url:
bug-reports:
synopsis: Generate statistics from Apache access logs
description: ApacheLogRev (logrev) is a command line tool that allows that parses Apache Access Logs
             and generate statistics Charts from it in PNG format and plain text format (parseable format).
category: Statistic
author: Daniel Molina Wegener
tested-with: GHC >= 7.0.3
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:

executable: logrev
main-is: logrev.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
