Name:                ApacheLogRev
Version:             0.0.1
Synopsis:            A tool to generate statistics charts from Apache Access Logs
Homepage:            https://github.com/dmw/ApacheLogRev
Package-Url:	     http://coder.cl/downloads/logrev-0.0.1.tar.gz
Bug-Reports:	     https://github.com/dmw/ApacheLogRev/issues
License:             BSD3
License-file:        LICENSE
Author:              Daniel Molina Wegener
Maintainer:          dmw@coder.cl
Category:            Tool
Build-type:          Simple
Cabal-version:       >= 1.6
Stability:	     Unstable
Description:	     ApacheLogRev (logrev) is a command line tool that allows
	     	     that parses Apache Access Logs and generate statistics Charts
	     	     from it in PNG format and plain text format (parseable format).
Data-Dir:	     lrdata
Data-File:
Tested-With:	     GHC >= 7.0.3

Source-repository head
  type:     git
  location: https://dmw@github.com/dmw/ApacheLogRev.git

Executable logrev
  Main-is:		Main.hs
  Extra-Libraries:      GeoIP
  Hs-Source-Dirs:	src
  Build-Tools:          hsc2hs
  Build-depends:
    Chart >= 0.15, Chart-gtk >= 0.15, MissingH >= 1.1.0.3,
    bytestring >= 0.9.1.10, colour >= 2.3.2, containers >= 0.4.0.0,
    data-accessor >= 0.2.2.1, parsec >= 3.1.1, text >= 0.11.0.6,
    time >= 1.2.0.3, unix >= 2.4.2.0, base >= 4 && <= 5,
    bytestring >= 0.9, deepseq >= 1.1.0.2
  Other-modules:        Data.GeoIP
                        Data.GeoIP.GeoDB
                        Data.LogRev
                        Data.LogRev.LogStats
                        Data.LogRev.Parser
                        Data.LogRev.Processing
                        Graphics.LogRev.Charts
                        Proc.LRS
                        Proc.LRS.Parser
  ghc-options:          -O2 -fforce-recomp

  -- ghc-options:       -O2 -Wall -rtsopts -auto-all -caf-all -fobject-code -fforce-recomp -funbox-strict-fields

